# Ble-smart-luggage-tracker

./: .gitignore  CMakeLists.txt  README.md  render.yaml  sdkconfig  sdkconfig.old
android-app/: README.md  build.gradle.kts  local.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/bletracker/app/: BleTrackerApplication.kt  MainActivity.kt  MainViewModel.kt
android-app/app/src/main/java/com/bletracker/app/auth/: GoogleSignInManager.kt
android-app/app/src/main/java/com/bletracker/app/data/: AlertLabels.kt  BackendApi.kt  Models.kt  Prefs.kt
android-app/app/src/main/java/com/bletracker/app/scanner/: BlePacketParser.kt  BleScanService.kt  BootCompletedReceiver.kt  LocationSnapshot.kt  NotificationFactory.kt  OwnerAlertPoller.kt  SightingQueueStore.kt  SightingUploader.kt
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend/data/: app.json  app.sample.json
backend/public/: admin.html  index.html
backend/scripts/: import-json-to-turso.mjs  send-fake-sensor-sighting.mjs
backend/src/: logic.js  security.js  server.js  store.js
docs/: Member_Service_Assignments.xlsx  android_integration.md  sensor-expansion-plan.md
docs/assets/: README.md
main/: CMakeLists.txt  ble_tracker.c  sensor_manager.c  sensor_manager.h
main/sensors/: aht20.c  aht20.h  bh1750.c  bh1750.h  mpu6050.c  mpu6050.h
reports/: deployment-guide.md  technical-documentation.md  user-documentation.md
